--- a/src/tooling.scss
+++ b/src/tooling.scss
@@ -1,14 +1,40 @@
-@use 'sass:map';
+@use "sass:map";
 @use "sass:color";
 
+:root {
+	--bfl-primary: #c20430;
+	--bfl-primary-hover: #970225;
+	--bfl-text: #191919;
+	--bfl-accent: #49cbff;
+	--bfl-basic-white: #fff;
+	--bfl-blue-tint: #5f98b6;
+	--bfl-maize-tint: #b49056;
+	--bfl-lavendar-tint: #7a5fab;
+	--bfl-sage-tint: #7a5fab;
+	--bfl-pink-tint: #9f5879;
+	--bfl-sidewalk-tint: #818181;
+	--bfl-rose-tint: #913131;
+
+	--bfl-glare: #f1f1f1ff;
+	--bfl-plaster: #d3d3d3ff;
+	--bfl-dried-leaves: #674a2a;
+	--bfl-concrete-tint: #7d7d7d;
+	--bfl-ivory-tint: #fffff0ff;
+	--bfl-primary-highlite: #ffebebff;
+	--bfl-hazy-tint: #ffebebff;
+	--bfl-grass-tint: #a6eca6;
+}
 
 .qubely-accordion-panel-handler-label {
 	font-weight: 700;
 }
+
 .qubely-block-accordion .qubely-accordion-item {
 	margin-bottom: 0.5rem;
 }
+
 .tooling {
+
 	/*background-color: var(--wp--preset--tooling-base);*/
 	border: none;
 	font-size: 1rem;
@@ -16,45 +42,45 @@
 	padding: 0;
 	width: 100%;
 
+	.table-header,
+	.table-list {
+		display: inline-grid;
+		grid-template-areas: "item item docs docs desc desc desc desc";
+		grid-template-columns: repeat(8, 1fr);
+		width: 100%;
+	}
 
+	.table-list {
+		padding: 0.75rem;
+		border-bottom: 1px solid var(--bfl-concrete-tint);
+
+		&:nth-of-type(even) {
+			background: var(--bfl-glare);
+		}
+	}
 
 	.table-header {
 		background-color: transparent;
-		border-bottom: 2px solid black;
+		border-bottom: 2px solid var(--bfl-text);
+
 		/*color: var(--wp--preset--tooling-contrast);*/
 		display: block;
 		font-family: inherit;
 		font-size: 0.9rem;
 		font-weight: 700;
-		color: black;
+		color: var(--bfl-text);
 		margin: 0;
 		outline: none;
 		padding: 0.75rem 0 0.25rem 0;
 		position: relative;
 		text-transform: uppercase;
 		width: 100%;
-	}
 
-	mark {
-		background-color: #ffebeb;
-	}
-
-	.table-header {
 		&:focus {
 			outline: 4px solid transparent;
 		}
 	}
 
-
-	.table-list {
-		padding: 0.75rem ;
-		border-bottom: 1px solid darkgray;
-	}
-	.table-list {
-		&:nth-of-type(even) {
-			background: #f6f6f6;
-		}
-	}
 	.table-docs {
 		display: flex;
 		align-items: center;
@@ -62,76 +88,79 @@
 		padding-left: 0.4rem;
 		font-size: 0.9rem;
 	}
+
 	.table-desc {
 		display: flex;
 		flex-direction: column;
 		font-size: 0.9rem;
 		line-height: 1.2;
-	}
-	.table-desc {
-		&> mark {
+
+		> mark {
 			margin-top: 0.4rem;
 			padding: 0.1rem 0.2rem;
+			width: fit-content;
+			background-color: var(--bfl-primary-highlite);
 		}
 	}
+
 	.table-name {
 		line-height: 1.2;
 		font-weight: 600;
-		color: black;
+		color: var(--bfl-text);
 	}
-	mark {
-		width: fit-content;
-	}
+
 	.pdf {
-		&:before {
-			content: 'PDF';
-			color: white;
-			padding:0 0.4rem;
+
+		&::before {
+			content: "PDF";
+			color: var(--bfl-basic-white);
+			padding: 0.1rem 0.4rem;
 			border-radius: 0.5rem;
 			left: -5px;
 			position: relative;
-			background: #ff2828;
+			background: var(--bfl-primary);
 			font-size: x-small;
-			font-weight: bold;
-
+			font-weight: 700;
 		}
 	}
+
 	.stl {
-		&:before {
-			content: 'STL';
-			color: black;
-			padding:0 0.4rem;
+
+		&::before {
+			content: "STL";
+			color: var(--bfl-text);
+			padding: 0.1rem 0.4rem;
 			border-radius: 0.5rem;
 			left: -5px;
 			position: relative;
-			background: #b9dce7;
+			background: var(--bfl-hazy-tint);
 			font-size: x-small;
-			font-weight: bold;
-
+			font-weight: 700;
 		}
 	}
 
 	.gcode {
-		&:before {
-			content: 'GCODE';
-			color: black;
-			padding:0 0.4rem;
+
+		&::before {
+			content: "GCODE";
+			color: var(--bfl-text);
+			padding: 0.1rem 0.4rem;
 			border-radius: 0.5rem;
 			left: -5px;
 			position: relative;
-			background: #a6eca6;
+			background: var(--bfl-grass-tint);
 			font-size: x-small;
-			font-weight: bold;
+			font-weight: 700;
 
 		}
 	}
-
 
 	.table-btn {
 		align-self: center;
 		line-height: 1;
 		white-space: nowrap;
 	}
+
 	.table-btn:hover {
 		cursor: pointer;
 	}
@@ -148,20 +177,15 @@
 	.table-list > .table-name {
 		grid-area: item;
 	}
+
 	.table-header > .heading-docs,
 	.table-list > .table-docs {
 		grid-area: docs;
 	}
+
 	.table-header > .heading-desc,
 	.table-list > .table-desc {
 		grid-area: desc;
-	}
-	.table-header,
-	.table-list {
-		display: inline-grid;
-		grid-template-areas: "item item docs docs desc desc desc desc";
-		grid-template-columns: repeat(8, 1fr);
-		width: 100%;
 	}
 
 	.tool-footer {
@@ -170,25 +194,36 @@
 		justify-content: space-around;
 		align-items: center;
 		width: 100%;
-		background: #1F1F1F;
+		background: var(--bfl-text);
 	}
+
 	.light-bkg {
-		background-color: ivory;
+		background-color: var(--bfl-ivory-tint);
+	}
+
+	.labels {
+		display: flex;
+		align-items: center;
 	}
 }
+
 /* wrap description */
 @media (max-width: 999px) {
+
 	.tooling {
+
 		.table-header,
 		.table-list {
 			display: grid;
-			grid-template-areas: "item item item item docs docs docs docs"
-							  "desc desc desc desc desc desc desc desc";
+			grid-template-areas:
+				"item item item item docs docs docs docs"
+				"desc desc desc desc desc desc desc desc";
 			width: 100%;
 		}
 
 		.table-header {
-			&> .heading-desc {
+
+			.heading-desc {
 				display: none;
 			}
 		}
@@ -204,9 +239,11 @@
 		}
 	}
 }
+
 @media (max-width: 479px) {
 
 	.tooling {
+
 		.table-name {
 			padding: 0.5rem 0;
 		}
@@ -214,91 +251,18 @@
 		.table-header,
 		.table-list {
 			display: grid;
-			grid-template-areas:  "item item item item item item item item"
-							  "docs docs docs docs docs docs docs docs"
-							  "desc desc desc desc desc desc desc desc";
+			grid-template-areas:
+				"item item item item item item item item"
+				"docs docs docs docs docs docs docs docs"
+				"desc desc desc desc desc desc desc desc";
 			width: 100%;
 		}
 
 		.table-header {
-			&> .heading-desc {
+
+			> .heading-desc {
 				display: none;
 			}
 		}
 	}
 }
-
-.tooling {
-	.labels {
-		display: flex;
-		align-items: center;
-	}
-	.ui.label {
-		margin: 0 0.5em 0 0;
-		padding: 0.4em 0.833em;
-		min-width: 3em;
-		text-align: center;
-		font-size: 0.7rem;
-		line-height: 1;
-		border-radius: 0.5rem;
-	}
-	.ui.label.abrasive {
-		background-color: #F2D7D5;
-	}
-	.ui.label.arts {
-		background-color: #FADBD8;
-	}
-	.ui.label.auto {
-		background-color: #EBDEF0;
-	}
-	.ui.label.computer {
-		background-color: #E8DAEF;
-	}
-	.ui.label.fab {
-		background-color: #D4E6F1;
-	}
-	.ui.label.text {
-		background-color: #D6EAF8;
-	}
-	.ui.label.layout {
-		background-color: #D1F2EB;
-	}
-	.ui.label.elect {
-		background-color: #D0ECE7;
-	}
-	.ui.label.machine {
-		background-color: #D4EFDF;
-	}
-	.ui.label.dim {
-		background-color: #D5F5E3;
-	}
-	.ui.label.misc {
-		background-color: #FCF3CF;
-	}
-	.ui.label.plastic {
-		background-color: #FDEBD0;
-	}
-	.ui.label.ceramic {
-		background-color: #FAE5D3;
-	}
-	.ui.label.prototype {
-		background-color: #F6DDCC;
-	}
-	.ui.label.stock {
-		background-color: #FBFCFC;
-	}
-	.ui.label.metal {
-		background-color: #F2F3F4;
-	}
-	.ui.label.finish {
-		background-color: #EAEDED;
-	}
-	.ui.label.weld {
-		background-color: #E5E8E8;
-	}
-	.ui.label.wood {
-		background-color: #D6DBDF;
-	}
-
-}
-/*# sourceMappingURL=tooling.css.map*/
