fix color assignment

--- a/src/tooling.scss
+++ b/src/tooling.scss
@@ -1,5 +1,6 @@
 @use "sass:map";
 @use "sass:color";
+//@use "variables";
 
 // find custom property CSS colors in child theme styles.css file
 .qubely-accordion-panel-handler-label {
