Fix appearance of document download
- allow second pdf to wrap under first in the tools table

--- a/src/tooling.scss
+++ b/src/tooling.scss
@@ -65,6 +65,7 @@
 
 	.download {
 		display: flex;
+		flex-wrap: wrap;
 		align-items: center;
 		justify-content: flex-start;
 		padding-left: 0.4rem;
